# big-data-final

./: README.md  pyproject.toml
infrastructure/: .env.example  docker-compose.yml
infrastructure/compose/: airflow.yaml  metabase.yaml  mlflow.yaml  networks-volumes.yaml  platform.yaml  spark.yaml
infrastructure/docker/airflow/: Dockerfile
infrastructure/docker/mlflow/: Dockerfile
infrastructure/docker/spark/: Dockerfile
infrastructure/scripts/: init-minio.sh  init-postgres.sh
orchestration/dags/: etl_paysim.py  ml_extract_feature_paysim.py  ml_train_paysim.py
orchestration/plugins/utils/: paysim_time_calc.py  validate_minio.py
processing/generators/: generate_paysim.py
processing/ml/: config.py  train_sklearn.py  train_spark.py
processing/spark/: extract_feature_paysim.py  process_paysim.py
warehouse/clickhouse/: 001_initial_schema.sql  check_data.sh  clickhouse_loader.py
warehouse/clickhouse/migrations/: 001_initial_schema.sql
warehouse/clickhouse/scripts/: check_data.sh  truncate_table.sh
warehouse/dbt_clickhouse/: dbt_project.yml  profiles.yml
warehouse/dbt_clickhouse/macros/: macros.yml
warehouse/dbt_clickhouse/models/core/: dim_users.sql  fact_transactions.sql  schema.yml
warehouse/dbt_clickhouse/models/marts/: mart_anomaly_detection.sql  mart_fraud_analysis.sql  mart_hourly_patterns.sql  mart_merchant_risk.sql  mart_transaction_type_analysis.sql  mart_user_risk_score.sql  schema.yml
warehouse/dbt_clickhouse/models/staging/: sources.yml  stg_paysim_txn.sql
warehouse/ingestion/: clickhouse_loader.py
